# ripdrag

./: .gitignore  Cargo.toml  README.md  ga.strin.ripdrag.json  it.catboy.ripdrag.json  meson.build
.github/workflows/: ci.yml
src/: compact_view.rs  file_object.rs  list_view.rs  main.rs  meson.build  style.css  util.rs
