[package]
name = "ripdrag"
authors = ["Nicola Guerrera <guerrera.nicola@gmail.com>"]
description = "Drag and Drop files to and from the terminal"
version = "0.4.4"
readme = "README.md"
repository = "https://github.com/nik012003/ripdrag"
edition = "2021"
license-file = "LICENSE"
categories = ["command-line-utilities"]
exclude = ["/.vscode"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_6"] }
glib-macros = "0.18.0"
opener = "0.6.1"

[profile.release]
strip = true
lto = true
