[package]
name = "ripdrag"
authors = ["Nicola Guerrera <guerrera.nicola@gmail.com>"]
description = "Drag and Drop files to and from the terminal"
version = "0.4.11"
readme = "README.md"
repository = "https://github.com/nik012003/ripdrag"
edition = "2021"
license-file = "LICENSE"
categories = ["command-line-utilities"]
exclude = ["/.vscode"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_6"] }
glib-macros = "0.21.2"
opener = "0.8.3"
async-channel = "2.5.0"

[profile.release]
strip = true
lto = true
